--- a/springcloud-1.5/feign-service/build.gradle
+++ b/springcloud-1.5/feign-service/build.gradle
@@ -22,7 +22,14 @@ dependencies {
             //熔断dashboard
 //            "org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard:${springcloudNetflixVersion}",
             //Spring Boot Actuator，感应服务端变化
-            "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
+            "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}",
+
+            //<!--Spring Cloud Config 客户端依赖-->
+            "org.springframework.cloud:spring-cloud-starter-config:${springcloudNetflixVersion}",
+            //spring cloud-bus依赖实现配置自动更新，rabbitmq
+            "org.springframework.cloud:spring-cloud-starter-bus-amqp:1.3.5.RELEASE",
+            //<!-- 连接配置中心重试的依赖 -->
+            'org.springframework.retry:spring-retry:1.2.5.RELEASE'
     )
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
