添加zipkin链路追踪

--- a/springcloud-1.5/feign-service/src/main/resources/bootstrap.yml
+++ b/springcloud-1.5/feign-service/src/main/resources/bootstrap.yml
@@ -42,6 +42,25 @@ spring:
     password: guest
     virtual-host: /
 
+  #服务链路追踪
+  zipkin:
+    sender:
+      type: web
+    base-url: http://localhost:8060/
+    locator:
+      discovery:
+        enabled: true
+    discovery-client-enabled: true
+
+  sleuth:
+    web:
+      client:
+        enabled: true
+    sampler:
+      # 默认的采样比率为0.1，不能看到所有请求数据
+      # 更改采样比率为1，就能看到所有的请求数据了，但是这样会增加接口调用延迟
+#      probability: 1.0
+      percentage: 1
 # 配置关闭安全验证
 management:
   security:
