--- a/springcloud-1.5/zuul/src/main/resources/application.properties
+++ b/springcloud-1.5/zuul/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=api
 server.port=8050
 
+#
+spring.zipkin.base-url=http://localhost:8060
+
 security.basic.enabled=false
 security.user.name=admin
 security.user.password=123456
