--- a/springcloud-1.5/feign-service/build.gradle
+++ b/springcloud-1.5/feign-service/build.gradle
@@ -29,7 +29,10 @@ dependencies {
             //spring cloud-bus依赖实现配置自动更新，rabbitmq
             "org.springframework.cloud:spring-cloud-starter-bus-amqp:1.3.5.RELEASE",
             //<!-- 连接配置中心重试的依赖 -->
-            'org.springframework.retry:spring-retry:1.2.5.RELEASE'
+            'org.springframework.retry:spring-retry:1.2.5.RELEASE',
+            //链路追踪
+            "org.springframework.cloud:spring-cloud-starter-zipkin:1.3.6.RELEASE",
+
     )
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
