--- a/springcloud-1.5/ribbon-service/build.gradle
+++ b/springcloud-1.5/ribbon-service/build.gradle
@@ -14,7 +14,12 @@ dependencies {
             "org.springframework.cloud:spring-cloud-starter-hystrix:${springcloudNetflixVersion}",
             "org.springframework.cloud:spring-cloud-starter-ribbon:${springcloudNetflixVersion}",
             //Spring Boot Actuator，感应服务端变化
-            "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
+            "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}",
+
+
+            "org.springframework.cloud:spring-cloud-starter-zipkin:1.3.6.RELEASE"
+//            "org.springframework.cloud:spring-cloud-sleuth-zipkin:1.3.6.RELEASE",
+//            "org.springframework.cloud:spring-cloud-starter-sleuth:1.3.6.RELEASE"
     )
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
