--- a/springcloud-1.5/zuul/build.gradle
+++ b/springcloud-1.5/zuul/build.gradle
@@ -14,7 +14,10 @@ dependencies {
             //路由
             "org.springframework.cloud:spring-cloud-starter-netflix-zuul:${springcloudNetflixVersion}",
             //熔断
-            "org.springframework.cloud:spring-cloud-starter-netflix-hystrix:${springcloudNetflixVersion}"
+            "org.springframework.cloud:spring-cloud-starter-netflix-hystrix:${springcloudNetflixVersion}",
+
+            //链路追踪
+            "org.springframework.cloud:spring-cloud-starter-zipkin:1.3.6.RELEASE",
     )
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
