spring cloud 1.X 版本添加spring boot admin 监控

--- a/springcloud-1.5/ribbon-service/src/main/resources/application.yml
+++ b/springcloud-1.5/ribbon-service/src/main/resources/application.yml
@@ -17,6 +17,13 @@ security:
     password: 123456
   basic:
     enabled: false
+
+
+# 配置关闭安全验证
+management:
+  security:
+    enabled: false
+
 eureka:
   #自己编写，用于修改注册中心的服务地址
   serverUrl: 127.0.0.1
