--- a/springcloud-1.5/build.gradle
+++ b/springcloud-1.5/build.gradle
@@ -39,6 +39,8 @@ subprojects {
                 //加入security，是因为访问eureka-server需要用户名和密码访问，为了安全
                 "org.springframework.boot:spring-boot-starter-security:${springBootVersion}",
 
+                //Spring Boot Actuator，感应服务端变化
+                "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}",
                 "org.springframework.boot:spring-boot-devtools:${springBootVersion}",
 
                 "com.alibaba:fastjson:1.2.62",
