--- a/springcloud-1.5/settings.gradle
+++ b/springcloud-1.5/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'springcloud-1.5'
-include 'Eureka'
+include 'eureka-server'
 include 'ribbon-service'
 include 'feign-service'
 include 'zuul'
@@ -7,4 +7,5 @@ include 'Hystrix-Turbine'
 include 'config-service'
 include 'zipkin-service'
 include 'admin-server'
+include 'consul-client'
 
