--- a/springcloud-1.5/eureka-server/build.gradle
+++ b/springcloud-1.5/eureka-server/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'idea'
+apply plugin: 'docker'
 
 sourceCompatibility = 1.8
 repositories {
