--- a/springcloud-2/eureka-server/build.gradle
+++ b/springcloud-2/eureka-server/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     compile(
+            "org.springframework.boot:spring-boot-starter-web",
             "org.springframework.cloud:spring-cloud-starter-netflix-eureka-server"
     )
     testCompile group: 'junit', name: 'junit', version: '4.12'
