--- a/springcloud-2/feign-client/build.gradle
+++ b/springcloud-2/feign-client/build.gradle
@@ -13,9 +13,11 @@ repositories {
 
 dependencies {
     compile (
+            "org.springframework.boot:spring-boot-starter-web",
             "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client",
-            "org.springframework.cloud:spring-cloud-starter-openfeign",
-            "org.springframework.cloud:spring-cloud-starter-netflix-hystrix"
+            "org.springframework.cloud:spring-cloud-starter-netflix-hystrix",
+            "org.springframework.cloud:spring-cloud-starter-openfeign"
+
     )
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
