--- a/springcloud-2/ribbon-client/build.gradle
+++ b/springcloud-2/ribbon-client/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     compile(
+            "org.springframework.boot:spring-boot-starter-web",
             "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client",
             "org.springframework.cloud:spring-cloud-starter-netflix-hystrix",
             "org.springframework.cloud:spring-cloud-starter-netflix-ribbon"
